[gd_scene load_steps=7 format=3 uid="uid://b1r2oijvhr565"]

[ext_resource type="Script" path="res://nodes/freddy_outage.gd" id="1_2ho1a"]
[ext_resource type="ArrayMesh" uid="uid://bynncts33nc48" path="res://assets/models/Freddy/Freddy.obj" id="1_mj2tq"]
[ext_resource type="AudioStream" uid="uid://x1xk8fqas07i" path="res://assets/sounds/outage.mp3" id="2_na1d1"]

[sub_resource type="Animation" id="Animation_udxik"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aeyqg"]
resource_name = "play"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0fyy"]
_data = {
"RESET": SubResource("Animation_udxik"),
"play": SubResource("Animation_aeyqg")
}

[node name="nodo" type="Node3D"]
script = ExtResource("1_2ho1a")

[node name="Freddy" type="MeshInstance3D" parent="."]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 2.19973, 2.13216)
mesh = ExtResource("1_mj2tq")

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="luz" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0fyy")
}

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00453043, 3.51897, 0.789085)
visible = false

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_na1d1")

[node name="delay_luz" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="delay_jumpscare" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="delay_luz" to="." method="_on_delay_luz_timeout"]
[connection signal="timeout" from="delay_jumpscare" to="." method="_on_delay_jumpscare_timeout"]
